Cycles and Freestyle - clipping plane / sphere problems #43195

Closed
opened 2015-01-10 13:46:27 +01:00 by Marek Moravec · 13 comments

System Information
Win7, GTX 560 Ti, GTX 970

Blender Version
Broken: 2.72 official 64bit, current buildbot: Hash: 9590e77
Worked: ----------

Short description of error
Currently the Cycles uses clipping sphere instead of clipping plane and Freestyle uses clipping plane as expected but when using Freestyle with Cycles this causes weird behaviour.
I strongly suggest to change the behaviour of Cycles and leave the Freestyle as is, because the clipping plane is far much easier to work with and is also supported in the OpenGL viewport.
You can see the problem in the attached blend. If you render the cube, cycles can't see the monkey inside, but freestyle can. It would be great if cycles coud see inside the box as well...

Clipping_Plane.blend

Exact steps for others to reproduce the error
Open the file and hit Render. You can see that the monkey is partly hidden for the cycles but fully visible for the Freestyle.

**System Information** Win7, GTX 560 Ti, GTX 970 **Blender Version** Broken: 2.72 official 64bit, current buildbot: Hash: 9590e77 Worked: ---------- **Short description of error** Currently the Cycles uses clipping sphere instead of clipping plane and Freestyle uses clipping plane as expected but when using Freestyle with Cycles this causes weird behaviour. I strongly suggest to change the behaviour of Cycles and leave the Freestyle as is, because the clipping plane is far much easier to work with and is also supported in the OpenGL viewport. You can see the problem in the attached blend. If you render the cube, cycles can't see the monkey inside, but freestyle can. It would be great if cycles coud see inside the box as well... [Clipping_Plane.blend](https://archive.blender.org/developer/F136561/Clipping_Plane.blend) **Exact steps for others to reproduce the error** Open the file and hit Render. You can see that the monkey is partly hidden for the cycles but fully visible for the Freestyle.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Traverso

Added subscriber: @Traverso

Added subscribers: @Sergey, @ThomasDinges, @kjym3, @mont29

Added subscribers: @Sergey, @ThomasDinges, @kjym3, @mont29

Not quite sure this is a real bug? Let's Cycles and Freestyle guys decide. :)

Not quite sure this is a real bug? Let's Cycles and Freestyle guys decide. :)

Afair it was always know that cycles uses clipping sphere instead of clipping plane. While plane might be more useful in some cases changing the behavior in clipping might break existing scenes and need to be carefully considered.

Afair it was always know that cycles uses clipping sphere instead of clipping plane. While plane might be more useful in some cases changing the behavior in clipping might break existing scenes and need to be carefully considered.
Author

It was always known but also manytimes criticized (and even wrongly reported as a bug). The camera clipping plane is extremely useful for interior architecture scenes but the sphere clipping is very problematic and it limits the way how to place the camera in the scene. It is also quite difficult to set up the clipping distance because there is no preview in the openGL viewport and using rendered view is difficult because interiors render usually very slowly and it takes a while to see the clipping effect clearly. Sometimes the clipping sphere clips just the edge of the table which is not very visible in preview (noisy) render but it is quite clear in the final (high-res).
I have to deal with that daily and the change to clipping sphere would be huge for me. I can document some "real-world" examples if needed. In my opinion the positives of this change are worth breaking the old files because the fix is quite simple in most scenes and in some it would not make a visible difference anyway.

It was always known but also manytimes criticized (and even wrongly reported as a bug). The camera clipping plane is extremely useful for interior architecture scenes but the sphere clipping is very problematic and it limits the way how to place the camera in the scene. It is also quite difficult to set up the clipping distance because there is no preview in the openGL viewport and using rendered view is difficult because interiors render usually very slowly and it takes a while to see the clipping effect clearly. Sometimes the clipping sphere clips just the edge of the table which is not very visible in preview (noisy) render but it is quite clear in the final (high-res). I have to deal with that daily and the change to clipping sphere would be huge for me. I can document some "real-world" examples if needed. In my opinion the positives of this change are worth breaking the old files because the fix is quite simple in most scenes and in some it would not make a visible difference anyway.
Sergey Sharybin self-assigned this 2015-01-13 15:33:23 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

I know there are enough circumstances when you want it to really be a plane, not a sphere, Just needed some time to look into historical reasons for that and so.

It appears @brecht initially implemented it this way because it was faster (implementation wise and render-time wise), it also appears i didn't find any render engine which uses sphere for perspective cameras (panorama is a bit more tricky, and probably should stay spheres).

I know there are enough circumstances when you want it to really be a plane, not a sphere, Just needed some time to look into historical reasons for that and so. It appears @brecht initially implemented it this way because it was faster (implementation wise and render-time wise), it also appears i didn't find any render engine which uses sphere for perspective cameras (panorama is a bit more tricky, and probably should stay spheres).

This issue was referenced by 54fd3f36a0

This issue was referenced by 54fd3f36a047b4d394c935a0aa387ae8a7b6a8c5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 54fd3f36a0.

Closed by commit 54fd3f36a0.
Author

Amazing! Thank you so much!!

Amazing! Thank you so much!!

This issue was referenced by blender/cycles@9116ebec2c

This issue was referenced by blender/cycles@9116ebec2cf34a8884e7ddba69b8806704059848
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43195
No description provided.