Fix T43195: Cycles uses clipping sphere instead of clipping plane

Basically the title tells it all, now Cycles uses proper clipping plane,
matching other render engines.